<resources>
    <string name="app_name">じゃんけんゲーム Ver2.0</string>
    <string name="title_call">じゃんけんゲーム</string>
    <string name="next_title">第%1$d戦目:じゃーんけーん......</string>
    <string name="title">じゃーんけーん......</string>
    <string name="sub_title">画像をタップしてね</string>
    <string name="user">あなた</string>
    <string name="cpu">相手</string>
    <string name="explanation_rule">ルール説明</string>
    <string name="rule1">1.対戦形式は任意で1～10まで対戦できます</string>
    <string name="rule2">2.対戦は勝敗に問わずカウントします</string>
    <string name="rule3">3.設定した値まで終了しません</string>
    <string name="rule4">4.結果は総合的に判断します</string>
    <string name="bar_explanation">対戦数はこのバーで選択できます</string>
    <string name="start">スタート</string>
    <string name="halfway_title">途中経過......</string>
    <string name="draw">引き分け</string>
    <string name="win">あんたの勝ち！！</string>
    <string name="lose">あなたの負け..</string>
    <string name="next_battle">次の対戦へ</string>
    <string name="next_scene">次のシーンへ</string>
    <string name="result">結果発表！！</string>
    <string name="back_title">タイトルへ</string>
</resources>